# menser

./: .gitignore  Cargo.toml  LICENSE  dist-workspace.toml  food-preferences.txt  readme.md  release.sh  todo.md  usage.md
.github/workflows/: jekyll-gh-pages.yml  release.yml  test_build_ureq.yaml
gpt-config/: conversation-direction.txt
src/: api_interaction.rs  api_interactions.rs  api_schema.rs  constants.rs  gpt_interaction.rs  main.rs  mensa_menu.rs  menu_impl.rs  menu_item_impl.rs  opening_hours.rs  rest_api_impl.rs  simple_argparse.rs  table_formatting.rs
src/api_interactions/: async.rs  mod.rs  sync.rs
src/localization/: english.rs  mod.rs  pirate.rs
