[package]
name = "menser"
authors = ["FlareFlo"]
description = "Fetches and displays meals from the stw-on API"
documentation = "https://docs.rs/menser"
repository = "https://github.com/FlareFlo/menser"
version = "0.1.12"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Decreases build times drastically, as performance is not a concern here
[profile.release]
opt-level = 0
debug = true
overflow-checks = true
codegen-units = 32

[dependencies]
cli-table = "0.4.7"
pad = "0.1.6"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"]}
serde_with = { version = "3.0.0", default-features = false, features = ["macros"]}
ureq = {version = "2.6.2",  default-features = false, features = ["tls", "json"]}
time = { version = "0.3.23", default-features = false, features = ["local-offset"] }