[package]
name = "menser"
authors = ["FlareFlo"]
description = "Fetches and displays meals from the stw-on API"
documentation = "https://docs.rs/menser"
repository = "https://github.com/FlareFlo/menser"
version = "0.1.40"
edition = "2021"
license = "MIT"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Decreases build times drastically, as performance is not a concern here
[profile.release]
opt-level = 1
debug = true
overflow-checks = true
codegen-units = 16

# The profile that 'cargo dist' will build with
# More optimized such that binary releases are smaller to download
[profile.dist]
inherits = "release"
opt-level = 3
codegen-units = 4
lto = "thin"

[features]
default = ["curl"]
ureq = ["dep:ureq"]
curl = []

[dependencies]
cli-table = "0.4.7"
pad = "0.1.6"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"]}
ureq = {version = "2.9",  default-features = false, features = ["tls", "json"], optional = true}
time = { version = "0.3.23", default-features = false, features = ["local-offset"] }
color-eyre = { version = "0.6.2", default-features = false }
itertools = "0.14.0"
